--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   <a href="#operation-sales">　4-2 レジ:会計</a>
   <a href="#operation-history">　4-3 レジ:取引履歴</a>
   <a href="#operation-management">　4-4 レジ:商品管理</a>
+  <a href="#rezi-system">5. レジシステム</a>
 </nav>
 
 <!-- 章1 -->
@@ -152,6 +153,7 @@
 <br>・[編集]で商品名、値段を編集できます。
 <br>・[削除]で商品を削除します。
 <br>・[初期商品に戻す]で全部消せます。
+
 </p>
 
 <!-- モーダル -->
