--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 <p>・オフライン対応してますが、起動するのにインターネット接続が必要となります。そのためリロードすると再起動扱いとなり、オフライン環境では使えなくなります。
 <br>・リロード、端末再起動、スリープ等でシステムが使えなくなりますがWiFi共有して起動できます。(起動したらデザリングは切って大丈夫です)
 <br>・長時間の使用による熱停止の可能性があります。起動済みの端末を複数台常備することを推奨します。
+<br>・iPhone/AndroidはUIが対応してないのでiPad/pcで使ってください。
 </p>
 
 <!-- 章3 -->
@@ -108,7 +109,7 @@
 <p>・左側の商品リストから商品をタップし、カートに入れます。
 <br>※商品をタップした回数分、ご注文内容に反映されます
 <br>・間違えた場合は横の[＋/－]で調整してください。[❌]をタップすると個数関係なく商品がご注文内容から減らされます。
-<br>・決まったら[会計へ進む]をタップして次の画面に進みます
+<br>・決まったら[会計へ進む]をタップして次の画面に進みます。
 </p>
 
 <!-- 4-2 レジ:会計 -->
@@ -136,7 +137,7 @@
 <p>表を見ればわかると思うのでボタンについて説明します。
 <br>・[すべて]は履歴の日付をかえて見ることができます。[すべて/今日のみ/日付指定]に変更できます。
 <br>・[検索]は商品名などを検索できます。クリアは検索内容を消すボタンです。
-<br>・[取引]は履歴内容を変えて見ることができます。[取引/日付/商品]に変更できます
+<br>・[取引]は履歴内容を変えて見ることができます。[取引/日付/商品]に変更できます。
 <br>・[CSVダウンロード]は取引履歴をファイルに出力して保存できます。
 <br>・[削除]と[全削除]は履歴を消せます。違いは選んで削除できるか全部削除かです。
 </p>
@@ -187,3 +188,4 @@
 </script>
 </body>
 </html>
+
