--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 <p>・オフライン対応してますが、起動するのにインターネット接続が必要となります。そのためリロードすると再起動扱いとなり、オフライン環境では使えなくなります。
 <br>・リロード、端末再起動、スリープ等でシステムが使えなくなりますがWiFi共有して起動できます。(起動したらデザリングは切って大丈夫です)
 <br>・長時間の使用による熱停止の可能性があります。起動済みの端末を複数台常備することを推奨します。
-<br>・iPhone/AndroidはUIが対応してないのでiPad/pcで使ってください。
+<br>・iPhone/AndroidはUIが対応してないのでpc/ipadで使ってください。
 </p>
 
 <!-- 章3 -->
 <h2 id="mechanism">3. 仕組み</h2>
 <p>・履歴等の保存
-<br>Localstorageを使っています。JavaScriptでユーザーのデータをウェブブラウザ(ローカル環境)に保存することができる仕組みです。これによりシステムを閉じても履歴は残ります
+<br>Localstorageを使っています。JavaScriptでユーザーのデータをウェブブラウザ(ローカル環境)に保存することができる仕組みです。これによりシステムを閉じても履歴は残ります。
 <br>・複数端末化のデータ同期
 <br>自分でサーバーを立てています。オフライン環境で使用後にオンライン環境になるとデータがサーバーに送信されます。これにより複数端末でもサーバーでのデータ同期が可能です。
 </p>
@@ -159,7 +159,7 @@
 <!-- 5.レジシステム -->
 <h2 id="rezi-system">5. レジシステム</h2>
 <p>
- <a href="https://sunaneko1223.github.io/ReziSystem/"=_blank">
+ <a href="https://sunaneko1223.github.io/ReziSystem/"target=_blank">
     レジシステム本体はこちら
   </a>
 </p>
@@ -188,4 +188,5 @@
 </script>
 </body>
 </html>
+
 
