--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     figure { margin: 0; }
     figcaption { font-size: 0.9em; color: #555; margin-bottom: 20px; }
 
+    /* ボタン風リンク */
+    a.button-link {
+      display: inline-block;
+      background-color: #2a7ae2;
+      color: #fff;
+      padding: 6px 12px;
+      border-radius: 5px;
+      text-decoration: none;
+      transition: background-color 0.2s;
+    }
+    a.button-link:hover { background-color: #1c5bb8; }
+    
     /* モーダル */
     .modal {
       display: none;
@@ -188,5 +200,6 @@
 </script>
 </body>
 </html>
+
 
 
