--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <!-- 5.レジシステム -->
 <h2 id="rezi-system">5. レジシステム</h2>
 <p>
- <a href="https://sunaneko1223.github.io/ReziSystem/"target=_blank">
+ <a href="https://sunaneko1223.github.io/ReziSystem/"target=_blank" class="button-link">
     レジシステム本体はこちら
   </a>
 </p>
@@ -200,6 +200,7 @@
 </script>
 </body>
 </html>
+
 
 
 
