--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <h2 id="caution">2. 注意事項</h2>
 <p>テスト</p>
 
-<p style="font-weight:bold; margin:10px 0;">3. 操作方法</p>
+<h2 id="operation">3. 操作方法</h2>
   
 <h2 id="operation-product">3-1. レジ:商品選択</h2>
 <p>テスト</p>
@@ -162,5 +162,6 @@
 </script>
 </body>
 </html>
+
 
 
