--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <h2 id="operation-product">3-1. レジ:商品選択</h2>
 <p>テスト</p>
 <figure>
-  <img src="images/product-ipad.png" alt="レジ商品画面">
+  <img src="images/Rezi-1.png" alt="レジ商品画面">
   <figcaption>商品画面スクリーンショット</figcaption>
 </figure>
 <p><strong>【使い方】</strong></p>
@@ -79,7 +79,7 @@
 <h2 id="operation-sales">3-2. レジ:会計</h2>
 <p>テスト</p>
 <figure>
-  <img src="images/sales-ipad.png" alt="レジ会計画面">
+  <img src="images/Rezi-2.png" alt="レジ会計画面">
   <figcaption>会計画面スクリーンショット</figcaption>
 </figure>
 <p><strong>【使い方】</strong></p>
@@ -88,7 +88,7 @@
 <h2 id="operation-confirm">3-3. レジ:注文確認</h2>
 <p>テスト</p>
 <figure>
-  <img src="images/confirm-ipad.png" alt="注文確認画面">
+  <img src="images/Rezi-3.png" alt="注文確認画面">
   <figcaption>注文確認画面スクリーンショット</figcaption>
 </figure>
 <p><strong>【使い方】</strong></p>
@@ -97,7 +97,7 @@
 <h2 id="operation-management">3-4. レジ:商品管理</h2>
 <p>テスト</p>
 <figure>
-  <img src="images/management-ipad.png" alt="商品管理画面">
+  <img src="images/Rezi-4.png" alt="商品管理画面">
   <figcaption>商品管理画面スクリーンショット</figcaption>
 </figure>
 <p><strong>【使い方】</strong></p>
@@ -106,7 +106,7 @@
 <h2 id="operation-history">3-5. レジ:取引履歴</h2>
 <p>テスト</p>
 <figure>
-  <img src="images/history-ipad.png" alt="取引履歴画面">
+  <img src="images/Rezi-5.png" alt="取引履歴画面">
   <figcaption>取引履歴画面スクリーンショット</figcaption>
 </figure>
 <p><strong>【使い方】</strong></p>
@@ -162,6 +162,7 @@
 </script>
 </body>
 </html>
+
 
 
 
