--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>レジシステム運営マニュアル</title>
+  <title>レジ運営マニュアル(改装中)</title>
   <style>
     body { font-family: sans-serif; padding: 15px; line-height: 1.6; max-width: 800px; margin: auto; }
     h1 { text-align: center; margin-bottom: 20px; }
@@ -162,6 +162,7 @@
 </script>
 </body>
 </html>
+
 
 
 
