--- a/index.html
+++ b/index.html
@@ -57,16 +57,18 @@
   </div>
 </nav>
 
-<!-- 章テンプレート -->
-
+<!-- 1章 -->
 <h2 id="system">1. レジシステムについて</h2>
 <p>テスト</p>
 
+<!-- 2章 -->
 <h2 id="caution">2. 注意事項</h2>
 <p>テスト</p>
 
+<!-- 3章 -->
 <h2 id="operation">3. 操作方法</h2>
-  
+
+<!-- 3-1 -->
 <h2 id="operation-product">3-1. レジ:商品選択</h2>
 <p>テスト</p>
 <figure>
@@ -76,6 +78,7 @@
 <p><strong>【使い方】</strong></p>
 <p>テスト</p>
 
+<!-- 3-2 -->
 <h2 id="operation-sales">3-2. レジ:会計</h2>
 <p>テスト</p>
 <figure>
@@ -85,6 +88,7 @@
 <p><strong>【使い方】</strong></p>
 <p>テスト</p>
 
+<!-- 3-3 -->
 <h2 id="operation-confirm">3-3. レジ:注文確認</h2>
 <p>テスト</p>
 <figure>
@@ -94,6 +98,7 @@
 <p><strong>【使い方】</strong></p>
 <p>テスト</p>
 
+<!-- 3-4 -->
 <h2 id="operation-management">3-4. レジ:商品管理</h2>
 <p>テスト</p>
 <figure>
@@ -103,6 +108,7 @@
 <p><strong>【使い方】</strong></p>
 <p>テスト</p>
 
+<!-- 3-5 -->
 <h2 id="operation-history">3-5. レジ:取引履歴</h2>
 <p>テスト</p>
 <figure>
@@ -112,9 +118,10 @@
 <p><strong>【使い方】</strong></p>
 <p>テスト</p>
 
+<!-- 4章 -->
 <h2 id="rezi-system">4. レジシステム</h2>
 <p>
- <a href="https://sunaneko1223.github.io/ReziSystem_v2/"target=_blank" class="button-link">
+ <a href="https://sunaneko1223.github.io/ReziSystem/"target=_blank" class="button-link">
     レジシステム本体はこちら
   </a>
 </p>
@@ -162,6 +169,7 @@
 </script>
 </body>
 </html>
+
 
 
 
