--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <h2 id="rezi-system">4. レジシステム</h2>
 <p>
  <a href="https://sunaneko1223.github.io/ReziSystem/"target=_blank" class="button-link">
-    レジシステム本体はこちら
+    レジシステムはこちら
   </a>
 </p>
 
@@ -169,6 +169,7 @@
 </script>
 </body>
 </html>
+
 
 
 
