--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <a href="#operation-confirm">3-3. レジ:注文確認</a>
         <a href="#operation-management">3-4. レジ:商品管理</a>
         <a href="#operation-history">3-5. レジ:取引履歴</a>
+        <a href="#operation-Rezi-server">3-6. レジ管理サーバー</a>
       </div>
     </div>
 
@@ -118,10 +119,20 @@
 <p><strong>【使い方】</strong></p>
 <p>テスト</p>
 
+<!-- 3-6 -->
+<h2 id="operation-Rezi-server">3-6. レジ管理サーバー</h2>
+<p>テスト</p>
+<figure>
+  <img src="images/Rezi-5.png" alt="サーバー画面">
+  <figcaption>サーバー画面スクリーンショット</figcaption>
+</figure>
+<p><strong>【使い方】</strong></p>
+<p>テスト</p>
+
 <!-- 4章 -->
 <h2 id="rezi-system">4. レジシステム</h2>
 <p>
- <a href="https://sunaneko1223.github.io/ReziSystem/"target=_blank" class="button-link">
+ <a href="https://sunaneko1223.github.io/ReziSystem_v2/"target=_blank" class="button-link">
     レジシステムはこちら
   </a>
 </p>
@@ -169,6 +180,7 @@
 </script>
 </body>
 </html>
+
 
 
 
