--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-<h1>レジシステム運営マニュアル</h1>
+<h1>レジシステム運営マニュアル［改装中］</h1>
 
 <!-- 目次 -->
 <nav>
@@ -60,7 +60,7 @@
 
 <!-- 1章 -->
 <h2 id="system">1. レジシステムについて</h2>
-<p>テスト</p>
+<p></p>
 
 <!-- 2章 -->
 <h2 id="caution">2. 注意事項</h2>
@@ -180,6 +180,7 @@
 </script>
 </body>
 </html>
+
 
 
 
