--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- 1章 -->
 <h2 id="system">1. レジシステムについて</h2>
-<p></p>
+<p>本システムは簡易レジです</p>
 
 <!-- 2章 -->
 <h2 id="caution">2. 注意事項</h2>
@@ -180,6 +180,7 @@
 </script>
 </body>
 </html>
+
 
 
 
