--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- 1章 -->
 <h2 id="system">1. レジシステムについて</h2>
-<p></p>
+<p>このレジシステムは、ブラウザ上で動作する簡易的な売上管理ツールです。祭りやイベントなどの現場で、PCやiPadを使ってスムーズに会計処理や商品管理を行うことができます。インターネット接続がなくても基本機能は利用可能で、複数の端末で同時に操作する場合は、オンライン環境でデータを同期することで履歴を共有できます。</p>
 
 <!-- 2章 -->
 <h2 id="caution">2. 注意事項</h2>
@@ -180,6 +180,7 @@
 </script>
 </body>
 </html>
+
 
 
 
