--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- 1章 -->
 <h2 id="system">1. レジシステムについて</h2>
-<p>このレジシステムは、ブラウザ上で動作する簡易的な売上管理ツールです。祭りやイベントなどの現場で、PCやiPadを使ってスムーズに会計処理や商品管理を行うことができます。</p>
+<p>このレジシステムは、ブラウザ上で動作する簡単な売上管理ツールです。イベントなどの現場で、PCやiPadから操作でき、インターネット接続がなくてもオフラインで使用できます。誰でも直感的に操作できるように設計されており、現場でのスムーズな会計処理をサポートします。</p>
 
 <!-- 2章 -->
 <h2 id="caution">2. 注意事項</h2>
@@ -180,6 +180,7 @@
 </script>
 </body>
 </html>
+
 
 
 
