--- a/index.html
+++ b/index.html
@@ -60,11 +60,18 @@
 
 <!-- 1章 -->
 <h2 id="system">1. レジシステムについて</h2>
-<p>このレジシステムは、ブラウザ上で動作する簡単な売上管理ツールです。イベントなどの現場で、PCやiPadから操作でき、インターネット接続がなくてもオフラインで使用できます。誰でも直感的に操作できるように設計されており、現場でのスムーズな会計処理をサポートします。</p>
+<p>
+このレジシステムは、ブラウザ上で動作する簡単な売上管理ツールです。イベントなどの現場で、PCやiPadから操作でき、インターネット接続がなくてもオフラインで使用できます。誰でも直感的に操作できるように設計されており、現場でのスムーズな会計処理をサポートします。
+</p>
 
 <!-- 2章 -->
 <h2 id="caution">2. 注意事項</h2>
-<p>テスト</p>
+<p>
+・オフラインでも使用できますが、起動するには最初にインターネット接続が必要です。<br>
+・端末のリロードや再起動、スリープ状態になるとシステムが一時的に使えなくなる場合があります。<br>
+・長時間使用すると端末が熱くなる可能性があるため、予備の端末を用意することをおすすめします。<br>
+・iPhoneやAndroidではUIが対応していないため、PCやiPadでの利用を推奨します。
+</p>
 
 <!-- 3章 -->
 <h2 id="operation">3. 操作方法</h2>
@@ -180,6 +187,7 @@
 </script>
 </body>
 </html>
+
 
 
 
