--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
 
 <!-- 3章 -->
 <h2 id="operation">3. 操作方法</h2>
+<p>
+この章では、レジシステムの各機能の使い方について説明します。<br>
+商品を選択するところから会計、履歴の確認まで、一連の操作の流れを順に学ぶことができます。<br>
+初めて使う方は、上から順に読み進めることでスムーズに操作を理解できます。
+</p>
 
 <!-- 3-1 -->
 <h2 id="operation-product">3-1. レジ:商品選択</h2>
@@ -187,6 +192,7 @@
 </script>
 </body>
 </html>
+
 
 
 
